# somnia

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  open_somnia.toml.example  openagent.toml.example  pyproject.toml  requirements.txt
.github/workflows/: desktop-bundles.yml  publish.yml
Docs/: 01-项目概述.md  02-版本管理.md  03-发版流程.md  04-CI-CD配置.md  05-PyPI发布.md  06-npm发布.md  07-Docker部署.md  08-用户安装方式.md  09-常见问题排查.md  10-探索能力.md  11-探索能力优化计划.md  12-压缩策略.md  14-上下文治理优化方案.md
Docs/Core/: 01-AgentLoop.md  02-ToolUse.md  03-TodoWrite.md  04-探索能力.md  05-上下文回滚.md  06-上下文治理与压缩.md  07-Subagent.md  08-Skills.md  09-MCP.md  10-权限系统与执行模式.md  11-任务系统.md  12-后台任务.md  13-AgentTeam.md  14-Hooks.md  15-桌面端基础设施与UI实施计划.md  README.md
Docs/运维/: 05-PyPI发布.md  07-Docker部署.md  10-桌面端发布.md  README.md
desktop/: __init__.py
desktop/backend/: __init__.py  bootstrap.py  ipc.py  server.py  sidecar_entry.py
desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts
desktop/ui/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
desktop/ui/src-tauri/capabilities/: default.json
desktop/ui/src-tauri/icons/: icon.icns
desktop/ui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
npm/: LICENSE  index.js  package.json  postinstall.js
open_somnia/: __init__.py  __main__.py  reasoning.py
open_somnia/app_service/: __init__.py  events.py  interaction_service.py  models.py  provider_service.py  runtime_host.py  session_service.py  turn_service.py
open_somnia/cli/: __init__.py  commands.py  main.py  prompting.py  provider_management.py  repl.py
open_somnia/collaboration/: bus.py  protocols.py
open_somnia/config/: models.py  settings.py
open_somnia/hooks/: __init__.py  manager.py  models.py  notify_user.py  runner.py  sdk.py
open_somnia/mcp/: client.py  minimal_stdio_server.py  registry.py  transport_stdio.py
open_somnia/providers/: anthropic_provider.py  base.py  openai_provider.py
open_somnia/runtime/: agent.py  compact.py  events.py  execution_mode.py  messages.py  permissions.py  session.py  subagent_runner.py  system_prompt.py  teammate.py  tool_events.py
open_somnia/skills/: loader.py
open_somnia/storage/: common.py  inbox.py  jobs.py  repo_summary.py  sessions.py  tasks.py  team.py  tool_logs.py  transcripts.py
open_somnia/tools/: background.py  filesystem.py  mcp.py  process.py  registry.py  shell.py  subagent.py  tasks.py  team.py  todo.py  tool_errors.py
openagent/: __init__.py  __main__.py
openagent/cli/: commands.py  main.py  prompting.py  repl.py
openagent/collaboration/: __init__.py  bus.py  protocols.py
openagent/config/: __init__.py  models.py  settings.py
openagent/mcp/: client.py  registry.py  transport_http.py
openagent/providers/: anthropic_provider.py  base.py  openai_provider.py
openagent/runtime/: agent.py  compact.py  events.py  execution_mode.py  interrupts.py  messages.py  permissions.py  session.py  subagent_runner.py  system_prompt.py  teammate.py  tool_events.py
scripts/: install.ps1  install.sh  package-lock.json  package.json  publish-npm.sh  publish-pypi.sh  release-desktop.ps1  release-desktop.sh  release.ps1  release.sh  start-desktop-acceptance.ps1  sync-version.ps1  sync-version.sh
tests/: AGENTTEAM_REAL_CLI_BUGS.md  run_mock_agentteam_bug_repro.py  run_real_agentteam_smoke.py  test_app_service.py  test_checkpoint_rollback.py  test_cli_resume.py  test_compact.py  test_desktop_release.py  test_filesystem_tool.py  test_hook_system.py  test_markdown_rendering.py  test_mcp_registry.py  test_mcp_stdio_transport.py  test_process_output.py  test_prompting.py  test_repl_todo.py  test_runtime_tool_output.py  test_settings_overrides.py  test_sidecar_server.py  test_skill_loader.py  test_subagent_tool.py  test_teammate_runtime.py  test_utils.py
(+28 files in other folders)
