[package]
name = "somnia-desktop"
version = "0.1.0"
description = "Somnia desktop shell"
authors = ["Somnia Team"]
license = "MIT"
edition = "2021"
default-run = "somnia-desktop"

[lib]
name = "somnia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
