[package]
name = "somnia-desktop"
version = "0.1.0"
description = "Somnia desktop shell"
authors = ["Somnia Team"]
license = "MIT"
edition = "2021"
default-run = "somnia-desktop"

[lib]
name = "somnia_desktop_lib"
# This desktop shell does not target mobile, so an rlib is enough for the bin target.
# Reintroduce staticlib/cdylib if the project adds Android or iOS builds later.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
